Add props. Some refactoring.

--- a/src/shared/cards-list/card/card-footer/card-footer.css
+++ b/src/shared/cards-list/card/card-footer/card-footer.css
@@ -5,10 +5,16 @@
   flex: 1;
   justify-content: space-between;
   padding: 10px 20px;
+  position: relative;
 }
 
 @media all and (min-width: 1024px) {
   .container {
     padding-right: 0;
+    order: 3;
+    flex: 1;
+    display: flex;
+    height: auto;
+    justify-content: center;
   }
 }
