--- a/src/shared/content/content.css
+++ b/src/shared/content/content.css
@@ -1,6 +1,20 @@
+.content {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 @media all and (min-width: 1024px) {
   .content {
+    padding-top: 20px;
+    padding-bottom: 20px;
     background-color: var(--white);
     border-radius: 7px 7px 0 0;
+  }
+}
+
+@media all and (min-width: 1540px) {
+  .content {
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
