--- a/src/shared/content/content.css
+++ b/src/shared/content/content.css
@@ -1,6 +1,9 @@
 .content {
   padding-top: 10px;
   padding-bottom: 10px;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 @media all and (min-width: 1024px) {
@@ -9,6 +12,8 @@
     padding-bottom: 20px;
     background-color: var(--white);
     border-radius: 7px 7px 0 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
